--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
   ],
   "require": {
     "php": ">=5.4.0",
-    "knplabs/gaufrette": "0.2.*@dev",
-    "pimple/pimple": "~1.0"
+    "knplabs/gaufrette": "0.2.*@dev"
   },
   "require-dev": {
     "phpunit/phpunit": "4.0.*"
