--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "knplabs/gaufrette": "0.2.*@dev"
   },
   "require-dev": {
-    "phpunit/phpunit": "4.0.*"
+    "phpunit/phpunit": "~4.0"
   },
   "autoload": {
     "psr-0": {
